--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,17 +1,16 @@
 {
   "name": "ui",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint \"**/*.ts*\""
+    "lint": "eslint src"
   },
   "devDependencies": {
-    "@types/react": "^18.0.22",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
-    "react": "^18.2.0",
+    "vue": "^3.2",
     "tsconfig": "*",
     "typescript": "^4.5.2"
   }
