--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,19 +6,20 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "lint:write": "eslint src --fix"
   },
   "dependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "nuxt": "^3.2.0",
     "ui": "*"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.1.2",
     "@babel/core": "^7.0.0",
-    "eslint": "7.32.0",
-    "eslint-config-custom": "*",
-    "tsconfig": "*",
+    "@nuxt/devtools": "^0.1.2",
     "@types/node": "^17.0.12",
+    "eslint-config-custom": "file:../eslint-config-custom",
+    "tsconfig": "*",
     "typescript": "^4.5.3"
   }
 }
