--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "lint:write": "turbo run lint:write"
   },
   "devDependencies": {
     "eslint-config-custom": "*",
