--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -6,5 +6,9 @@
     "base.json",
     "nextjs.json",
     "react-library.json"
-  ]
+  ],
+  "dependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "eslint-config-custom": "file:../eslint-config-custom"
+  }
 }
