--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,13 +5,16 @@
   "types": "./src/index.ts",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "lint:write": "eslint src --fix"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
     "eslint-config-custom": "*",
-    "vue": "^3.2",
     "tsconfig": "*",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "vue": "^3.2"
+  },
+  "dependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0"
   }
 }
