chore: setup tests

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "turbo run lint",
     "lint:write": "turbo run lint:write",
 		"test": "turbo run test",
-		"test:ci": "turbo run test:ci"
+		"test:ci": "turbo run test:ci",
+		"test:e2e": "turbo run test:e2e"
   },
   "devDependencies": {
     "eslint-config-custom": "*",
