--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -1,18 +1,3 @@
 {
-	"extends": "tsconfig/nuxt.json",
-	"include": [
-		"src/**/*",
-		".nuxt/nuxt.d.ts"
-	],
-	"exclude": [
-		"node_modules",
-		"dist"
-	],
-	"compilerOptions": {
-		"paths": {
-			"~/*": [
-				"./src/*"
-			]
-		}
-	}
+	"extends": "./.nuxt/tsconfig.json"
 }
