--- a/apps/storybook/tsconfig.node.json
+++ b/apps/storybook/tsconfig.node.json
@@ -1,9 +1,8 @@
 {
+  "extends": "@tsconfig/node18/tsconfig.json",
+  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*"],
   "compilerOptions": {
     "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["vite.config.ts"]
+    "types": ["node"]
+  }
 }
