--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "consola": "^3.1.0",
     "nuxt": "^3.2.0",
-    "ui": "*"
+    "ui": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@nuxt/devtools": "^0.1.2",
     "@types/node": "^17.0.12",
-    "eslint-config-custom": "file:../eslint-config-custom",
-    "tsconfig": "*",
+    "eslint-config-custom": "workspace:*",
+    "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
   }
 }
