--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,20 +8,21 @@
     "start": "nuxt start",
     "lint": "eslint src",
     "lint:write": "eslint src --fix",
-		"test:e2e": "playwright test tests/e2e"
+    "test:e2e": "playwright test tests/e2e"
   },
   "dependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "consola": "^3.1.0",
     "nuxt": "^3.2.0",
-    "ui": "*"
+    "ui": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@nuxt/devtools": "^0.1.2",
     "@playwright/test": "^1.30.0",
     "@types/node": "^17.0.12",
-    "eslint-config-custom": "file:../eslint-config-custom",
-    "tsconfig": "*",
+    "eslint-config-custom": "workspace:*",
+    "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
   }
 }
