--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "nuxt-turborepo-example",
   "version": "0.0.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -22,5 +18,5 @@
     "node": ">=14.0.0"
   },
   "dependencies": {},
-  "packageManager": "npm@9.2.0"
+  "packageManager": "pnpm@8.4.0"
 }
