--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,9 +12,9 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^2.2.10",
-    "eslint-config-custom": "file:../eslint-config-custom",
+    "eslint-config-custom": "workspace:*",
     "jsdom": "^21.1.0",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "typescript": "^4.5.2",
     "vitest": "^0.28.5",
     "vue": "^3.2"
